# probabilistic-robotics-playground

./: .gitignore  README.md
dockerfiles/: Dockerfile  docker-compose.yml
experiment_data/: history
experiment_data/imu_only_10lm_8_shape_1_20260121_024203/: ekf_trajectory.csv  ground_truth.csv  metrics.csv  summary.csv  summary.json
experiment_data/imu_only_10lm_square_2_20260121_015645/: ekf_trajectory.csv  ground_truth.csv  metrics.csv  summary.csv  summary.json
experiment_data/imu_vision_10lm_8_shape_1_20260121_025918/: Screencast from 2026-01-21 05-59-14.webm  ekf_trajectory.csv  ground_truth.csv  metrics.csv  summary.csv  summary.json  visual_measurements.csv
experiment_data/imu_vision_10lm_square_1_20260121_031954/: Screencast from 2026-01-21 06-19-48.webm  ekf_trajectory.csv  ground_truth.csv  metrics.csv  summary.csv  summary.json  visual_measurements.csv
src/ekf_experiment/: package.xml  setup.cfg  setup.py
src/ekf_experiment/ekf_experiment/: experiment_executor.py  gz_tf_bridge.py
src/ekf_experiment/launch/: experiment.launch.py  run_experiment.launch.py
src/follower_robot/: CMakeLists.txt  package.xml
src/follower_robot/launch/: leader_follower.launch.py
src/follower_robot/src/: follower_node.cpp  leader_node.cpp  measurement.cpp
src/turtle_experiments/: CMakeLists.txt  package.xml
src/turtle_experiments/config/: diff_controllers.yaml
src/turtle_experiments/include/: turtle_experiments.h
src/turtle_experiments/launch/: bringup.launch.py  turtle_experiments.launch.py
src/turtle_experiments/src/: turtle_experiments.cpp
src/visual_inertial_nav_es_ekf/: package.xml  setup.cfg  setup.py
src/visual_inertial_nav_es_ekf/environment/: project_world.sdf
src/visual_inertial_nav_es_ekf/launch/: visual_inertial_nav_es_ekf.py
src/visual_inertial_nav_es_ekf/resource/: README.md
src/visual_inertial_nav_es_ekf/scripts/: generate_color_landmark.py  landmarks.json  my_world.sdf  project_world.sdf  visualize_results.py
src/visual_inertial_nav_es_ekf/src/: es_ekf.py  trajectory_monitor.py  visual_detector.py
src/visual_inertial_nav_es_ekf/visual_inertial_nav_es_ekf/: data_logger.py  es_ekf.py  keyboard_teleop.py  trajectory_monitor.py  trajectory_publisher.py  velocity_smoother.py  visual_detector.py  visual_detector_camera.py
